Fixed some wrapping issues on the tag list page
git-svn-id: http://svn.winnow.peerworks.org/trunk/winnow@1866 f9e11ea3-fe04-0410-b62f-af45e3a9b5a1

--- a/public/stylesheets/tables.css
+++ b/public/stylesheets/tables.css
@@ -57,6 +57,7 @@ th.control_icons, td.control_icons {
 
 td.view_state {
 	text-align: left;
+	white-space: nowrap;
 }
 
 td.number, th.number, 
